jena-shex/src/test/files/spec/negativeSyntax/1iriMininclusive.shex
<http://a.example/IssueShape> {
   <http://a.example/p1> IRI MININCLUSIVE "^ab$"
}
